<resources>
    <string name="app_name">Driving Lessons</string>
    <string name="login"><b>Login</b></string>
    <string name="register"><b>Register</b></string>
    <string name="edit"><b>Edit</b></string>
    <string name="info"><b>Info</b></string>
    <string name="student"><b>Student</b></string>
    <string name="teacher"><b>Teacher</b></string>
    <string name="students"><b>Students</b></string>
    <string name="teachers"><b>Teachers</b></string>
    <string name="lessons"><b>Lessons</b></string>
    <string name="users"><b>Users</b></string>
    <string name="lesson_filters"><b>Lesson filters</b></string>
    <string name="went_wrong_error">something went wrong</string>
    <string name="assigned_teacher">the teacher has been assigned</string>
    <string name="email_or_password_incorrect">email or password are incorrect</string>
    <string name="reset_email_failure">couldn\'t send password reset email</string>
    <string name="reset_email_success">password reset email sent successfully</string>
    <string name="enter_email_first">please enter email first</string>
    <string name="enter_image_first">please enter image first</string>
    <string name="signup_message">Don\'t have an account yet?</string>
    <string name="signup_now">Signup now</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="confirm_password">Confirm password</string>
    <string name="full_name">Full name</string>
    <string name="search_user">Search user</string>
    <string name="search_student">Search student</string>
    <string name="search_teacher">Search teacher</string>
    <string name="options"><b>⋮</b></string>
    <string name="assign"><b>Assign</b></string>
    <string name="delete"><b>Delete</b></string>
    <string name="confirm"><b>Confirm</b></string>
    <string name="add"><b>Add</b></string>
    <string name="cancel"><b>Cancel</b></string>
    <string name="add_a_lesson"><b>Add a lesson</b></string>
    <string name="student_filters"><b>Student filters</b></string>
    <string name="student_has_theory_test">Student has theory test</string>
    <string name="teacher_drives_a_manual_car">Teacher drives a manual car</string>
    <string name="enough_money_error">You don\'t have enough money in your account</string>
    <string name="lesson_past_error">You can\'t have a lesson in the past</string>
    <string name="lesson_confirmed">This lesson has been confirmed</string>
    <string name="lesson_canceled">This lesson has been canceled</string>
    <string name="lesson_already_confirmed_error">This lesson is already confirmed</string>
    <string name="lesson_added">Your lesson has been added</string>
    <string name="test_added">Your test has been added</string>
    <string name="teacher_filters"><b>Teacher filters</b></string>
    <string name="driving_lesson"><b>Driving Lesson</b></string>
    <string name="driving_test"><b>Driving Test</b></string>
    <string name="confirmed"><b>Confirmed:</b></string>
    <string name="logout"><b>Logout</b></string>
    <string name="balance"><b>Balance</b></string>
    <string name="about"><b>About</b></string>
    <string name="not_owner"><b>Owner mode disabled</b></string>
    <string name="owner"><b>Owner mode active</b></string>
    <string name="transactions"><b>Transactions</b></string>
    <string name="from"><b>From</b></string>
    <string name="to"><b>To</b></string>
    <string name="ratings"><b>Ratings</b></string>
    <string name="add_teacher_rating"><b>Add teacher rating</b></string>
    <string name="add_student_rating"><b>Add student rating</b></string>
    <string name="add_rating">Add rating</string>
    <string name="rating_added">Rating has been added</string>
    <string name="money_added">The money was transferred successfully</string>
    <string name="are_you_driving_on_a_manual_car">Are you driving on a manual car?</string>
    <string name="are_you_a_tester">Are you a tester?</string>
    <string name="cost">Cost(₪)</string>
    <string name="add_money"><b>Add money</b></string>
    <string name="amount">Amount(₪)</string>
    <string name="enter_the_amount_you_re_adding_to_your_account">Enter the amount to add to your account</string>
    <string name="enter_the_cost_per_hour_of_your_lesson">Enter the cost per hour of your lesson</string>
    <string name="test"><b>test</b></string>
    <string name="network_error">Please connect to a network before trying again</string>
    <string name="online">Back online</string>
    <string name="offline">Offline, try reconnecting</string>
    <string name="add_to_calendar"><b>Add to calendar</b></string>
    <string name="about_message">Driving Lessons \n by Liam Izsak \n this application allows a student to setup a lesson with a driving teacher of his choice \n and allows a teacher or a tester to get student request and confirm them if they choose to \n the owner selects the tester for the test requests \n the students choose their teacher and time of lessons \n test request is allowed only after 18.66 hours of completed lessons \n which is 28 lessons of 40 min each</string>
    <string name="seniority">Seniority</string>
    <string name="rating">Rating</string>
</resources>