<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".adapters.UserAdapter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAdapterUser"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewAdapterUser"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/user_icon"
            app:layout_constraintBottom_toTopOf="@+id/textViewAdapterUserInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAdapterUserFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/full_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewAdapterUserEmail"
            app:layout_constraintStart_toEndOf="@+id/imageViewAdapterUser"
            app:layout_constraintTop_toTopOf="@+id/imageViewAdapterUser" />

        <TextView
            android:id="@+id/textViewAdapterUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewAdapterUserDate"
            app:layout_constraintStart_toStartOf="@+id/textViewAdapterUserFullName"
            app:layout_constraintTop_toBottomOf="@+id/textViewAdapterUserFullName" />

        <TextView
            android:id="@+id/textViewAdapterUserDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewAdapterUser"
            app:layout_constraintStart_toStartOf="@+id/textViewAdapterUserFullName"
            app:layout_constraintTop_toBottomOf="@+id/textViewAdapterUserEmail" />

        <TextView
            android:id="@+id/textViewAdapterUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="info"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageViewAdapterUser"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</HorizontalScrollView>
