<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioGroupFragmentUserViewRole"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFragmentUserViewTitle">

            <RadioButton
                android:id="@+id/radioButtonFragmentUserViewStudent"
                style="@style/Default.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/student" />

            <RadioButton
                android:id="@+id/radioButtonFragmentUserViewTeacher"
                style="@style/Default.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teacher" />

        </RadioGroup>

        <TextView
            android:id="@+id/textViewFragmentUserViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-16dp"
            android:layout_marginTop="8dp"
            android:text="@string/users"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutFragmentUserViewSearch"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewFragmentUserViewFilters"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/filter"
            app:layout_constraintEnd_toEndOf="@+id/radioGroupFragmentUserViewRole"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutFragmentUserViewSearch"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutFragmentUserViewSearch" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFragmentUserViewSearch"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageViewFragmentUserViewFilters"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/radioGroupFragmentUserViewRole"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupFragmentUserViewRole">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFragmentUserViewSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search_user"
                android:inputType="text"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="63dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/viewFragmentUserView"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFragmentUserViewSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFragmentUserView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewFragmentUserView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>